# ansible-devcontainer-vscode

./: .ansible-lint  .dockerignore  .editorconfig  .gitattributes  .gitignore  .grype.yaml  .pre-commit-config.yaml  .secrets.baseline  .shellcheckrc  .trivyignore  .yamllint  ACCIONES_MANUALES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_PR_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  Makefile  ORGANIZATION_SUMMARY.md  OSSF_SCORECARD_PROGRESS.md  PROMPTS.md  PR_FINAL_SUMMARY.md  README.md  SECURITY.md  SECURITY_ALERT_ANALYSIS_110.md  SECURITY_ALERT_MANAGEMENT_SUMMARY.md  SECURITY_REVIEW.md  SPONSORS.md  SUPPORT.md  ansible.cfg  codecov.yml  pyproject.toml  requirements-ansible.txt  requirements.txt  requirements.yml
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/agents/: build-validator.md  devcontainer-debugger.md  oncall-guide.md  security-auditor.md  stack-manager.md  terraform-reviewer.md  verify-app.md
.claude/commands/: ci-local.md  molecule-test.md  pr-ready.md  stack-switch.md  test-and-fix.md
.continue/agents/: config.yaml
.continue/mcpServers/: new-mcp-server.yaml
.devcontainer/: .template-metadata.json  Dockerfile  README.md  devcontainer.json  install_age.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  pull_request_template.md  renovate.json  security-alert-exceptions.yml  versions.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  devcontainer-issue.md  devcontainer-issue.yml  (+3 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
docs/: ARCHITECTURE.md  BOOTSTRAP_WINDOWS.md  BRANCH_CLEANUP_REPORT.md  BRANCH_PROTECTION.md  CHANGELOG.md  CONTRIBUTING.md  CORPORATE_NETWORK.md  DEVCONTAINER_DEBUG.md  IMAGE_OPTIMIZATION.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_GUIDE.md  MAINTENANCE.md  MERGE_INSTRUCTIONS.md  ONBOARDING-WINDOWS.md  OSSF_SCORECARD_PROGRESS.md  PERFORMANCE.md  PORTFOLIO.md  QUALITY_IMPROVEMENTS.md  QUICKSTART.md  README.md  RELEASE_FLOW.md  ROADMAP.md  SBOM.md  SECRETS.md  SECURITY_REVIEW.md  TROUBLESHOOTING.md  VSCODE_WORKFLOW.md  WORK_SUMMARY.md
examples/: DEVCONTAINER_FEATURES_EXPLAINED.md  README.md
infrastructure/: README.md
inventory/: cloud-example.yml
playbooks/: setup-workspace.yml  test-environment.yml  update-dependencies.yml
scripts/: README.md  bootstrap-windows.ps1  bootstrap-wsl2.ps1  check-branch-flow.sh  check-devcontainer.sh  check-security-alerts.sh  cleanup-merged-branches.sh  debug-devcontainer.sh  devcontainer-diff.py  devcontainer-metadata.py  doctor-devcontainer.sh  fix-dockerfiles.sh  package-lock.ci.json  run-ansible-tests.sh  run-smoke-tests.sh  run-terraform-tests.sh  smoke-devcontainer-image.sh  use-devcontainer.ps1  use-devcontainer.sh
tests/: test_check_branch_flow.py  test_devcontainer_tools.py  test_doctor_devcontainer.py
(+114 files in other folders)
