[project]
name = "ansible-devcontainer"
version = "0.1.0"
description = "Ansible DevContainer tooling and automation stack."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ansible>=9.0.0,<14.0.0",
  "ansible-navigator>=3.5.0",
  "molecule>=6.0.0,<26.0.0",
  "molecule-plugins[docker]>=23.5.0,<26.0.0",
  "pytest>=8.0.0",
  "pytest-ansible>=24.1.0",
  "pytest-cov>=4.1.0",
  "pytest-testinfra>=10.1.0",
  "yamllint>=1.35.0",
  "black>=24.0.0",
  "ruff>=0.3.0",
  "mypy>=1.8.0",
  "jmespath>=1.0.1",
  "netaddr>=1.2.1",
  "dnspython>=2.6.0",
  "passlib>=1.7.4",
  "boto3>=1.34.0",
  "botocore>=1.34.0",
  "ipython>=8.20.0",
  "pre-commit>=3.6.0",
  "detect-secrets>=1.4.0",
]

[tool.uv]
package = false

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--verbose",
  "--tb=short",
  "--strict-markers",
  "--cov=roles",
  "--cov=playbooks",
  "--cov=scripts",
  "--cov-report=html:htmlcov",
  "--cov-report=xml:coverage.xml",
  "--cov-report=term-missing:skip-covered",
  "--cov-branch",
  "--cov-fail-under=95",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]

[tool.coverage.run]
branch = true
source = ["roles", "playbooks", "scripts"]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
  "*/site-packages/*",
  ".venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
